<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/arkaplanImage"
        android:orderInCategory="100"
        android:title="@string/CUMA_BACK_IMAGE"
        app:showAsAction="never" />

    <item
        android:id="@+id/duzTema"
        android:orderInCategory="100"
        android:title="@string/CUMA_DUZ_TEMA"
        app:showAsAction="never" />

    <item
        android:id="@+id/hazirMessage"
        android:orderInCategory="100"
        android:title="@string/CUMA_HAZIR_MESSAGE"
        app:showAsAction="never" />

    <item
        android:id="@+id/mesajColor"
        android:orderInCategory="100"
        android:title="@string/CUMA_MSG_COLOR"
        app:showAsAction="never" />

    <item
        android:id="@+id/kendinYaz"
        android:orderInCategory="100"
        android:title="@string/CUMA_MSG_KENDIN_YAZ"
        app:showAsAction="never" />

</menu>

